# chess-opening-generator

./: .env  Dockerfile  README.md  application.py  config.py  config.toml  docker-compose.yml  main.py  pgn.py  picker.py  position.py  requirements.txt  rest_api_v1.py  setup.cfg  setup.py
data/: My Chess Repertoire.postman_collection.json
data/eco/: eco.csv
opening_generator/: __init__.py  application.py  pgn.py  picker.py  position.py
opening_generator/api/: api_eco.py  api_move.py  api_position.py  api_repertoire.py  api_user.py  auth.py
opening_generator/config/: __init__.py  config.toml
opening_generator/db/: __init__.py  eco_code_dao.py  line_dao.py  move_dao.py  position_dao.py  repertoire_dao.py  user_dao.py
opening_generator/exceptions/: __init__.py
opening_generator/models/: __init__.py  contact.py  eco_code.py  game_pgn.py  line.py  move.py  next_line.py  next_move.py  opening_move.py  position.py  repertoire.py  schemas.py  style.py  user.py
opening_generator/services/: auth.py  auth_service.py  eco_code_service.py  line_service.py  opening_tree_service.py  pgn.py  pgn_service.py  picker.py  picker_service.py  position_loader_service.py  position_service.py  repertoire_service.py  tree_loader_service.py  user_service.py
opening_generator/tree/: loader.py  move.py  opening_move.py  opening_tree.py
