[metadata]
name = my-chess-repertoire
version = 1.1.0
description = Create chess opening repertoires based on player preferences
keywords = chess, opening, repertoire
license = GPL License
license_file = LICENSE
classifiers =
    Framework :: FastApi
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.11
packages = opening_generator
install_requires =
    chess
    psycopg2-binary
    SQLAlchemy
    python-dotenv
    fastapi
    toml
    pydantic